[package]
name = "sflow-collector"
version = "0.1.0"
authors = ["Andreas Rammhold <andreas@rammhold.de>"]

[dependencies]
sflow = {path="../rust-sflow"}
serde = "1.0"
serde_json = "1.0"
serde_derive= "1.0"
#//{ git = "https://github.com/JakDar/rust-sflow", branch = "feature/add-sampled-header-contents"}
