[package]
name = "sflow-collector"
version = "0.1.0"
authors = ["Andreas Rammhold <andreas@rammhold.de>", "Jakub Darul"]

[dependencies]
#sflow = {path="../rust-sflow"}
sflow={ git = "https://github.com/JakDar/rust-sflow", branch = "cleaned"}
serde = "1.0"
serde_json = "1.0"
serde_derive= "1.0"
clap = "~2.32"
